--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(get_credentials)
 export(get_currency)
 export(get_stocks)
 export(get_stocks_hist)
+export(get_tweets)
 export(gg_colour_customs)
 export(gg_fill_customs)
 export(gg_pie)
@@ -232,8 +233,6 @@ importFrom(rdrop2,drop_download)
 importFrom(rdrop2,drop_search)
 importFrom(rdrop2,drop_upload)
 importFrom(rmarkdown,render)
-importFrom(rtweet,create_token)
-importFrom(rtweet,search_tweets)
 importFrom(rvest,html_attr)
 importFrom(rvest,html_attrs)
 importFrom(rvest,html_node)
