--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ export(removenarows)
 export(replaceall)
 export(right)
 export(rmse)
+export(rsq)
 export(statusbar)
 export(stocks_daily_plot)
 export(stocks_hist_fix)
