portf_distribution fix and rsqa added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,6 +111,7 @@ export(replaceall)
 export(right)
 export(rmse)
 export(rsq)
+export(rsqa)
 export(statusbar)
 export(stocks_daily_plot)
 export(stocks_hist_fix)
