--- a/NAMESPACE
+++ b/NAMESPACE
@@ -175,6 +175,7 @@ importFrom(graphics,rect)
 importFrom(gridExtra,arrangeGrob)
 importFrom(gridExtra,grid.arrange)
 importFrom(gridExtra,tableGrob)
+importFrom(gridExtra,ttheme_minimal)
 importFrom(h2o,as.h2o)
 importFrom(h2o,h2o.accuracy)
 importFrom(h2o,h2o.automl)
