Less dependencies and new mailSend

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -194,9 +194,12 @@ importFrom(h2o,h2o.saveModel)
 importFrom(h2o,h2o.varimp)
 importFrom(httr,GET)
 importFrom(httr,POST)
+importFrom(httr,authenticate)
 importFrom(httr,oauth1.0_token)
 importFrom(httr,oauth_app)
 importFrom(httr,oauth_endpoint)
+importFrom(httr,stop_for_status)
+importFrom(httr,upload_file)
 importFrom(jsonlite,flatten)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
@@ -279,6 +282,7 @@ importFrom(tm,stripWhitespace)
 importFrom(tm,tm_map)
 importFrom(utils,URLencode)
 importFrom(utils,capture.output)
+importFrom(utils,combn)
 importFrom(utils,data)
 importFrom(utils,download.file)
 importFrom(utils,flush.console)
@@ -293,6 +297,7 @@ importFrom(utils,read.table)
 importFrom(utils,remove.packages)
 importFrom(utils,tail)
 importFrom(utils,type.convert)
+importFrom(utils,write.csv)
 importFrom(utils,write.table)
 importFrom(wordcloud,textplot)
 importFrom(wordcloud,wordcloud)
