add_headers dep fix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -194,6 +194,7 @@ importFrom(h2o,h2o.saveModel)
 importFrom(h2o,h2o.varimp)
 importFrom(httr,GET)
 importFrom(httr,POST)
+importFrom(httr,add_headers)
 importFrom(httr,authenticate)
 importFrom(httr,oauth1.0_token)
 importFrom(httr,oauth_app)
