New mplot_gain plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(mplot_cuts)
 export(mplot_cuts_error)
 export(mplot_density)
 export(mplot_full)
+export(mplot_gain)
 export(mplot_importance)
 export(mplot_lineal)
 export(mplot_metrics)
