gain lift added to fx and plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(forecast_arima)
 export(forecast_ml)
 export(formatNum)
 export(freqs)
+export(gain_lift)
 export(geoAddress)
 export(geoGrid)
 export(geoMap)
