Separated plots and fxs for conf matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(categ_reducer)
 export(categoryCounter)
 export(cleanText)
 export(clusterKmeans)
+export(conf_mat)
 export(corr)
 export(corr_plot)
 export(corr_var)
@@ -71,6 +72,7 @@ export(mailSend)
 export(mape)
 export(missingness)
 export(model_metrics)
+export(mplot_conf)
 export(mplot_cuts)
 export(mplot_cuts_error)
 export(mplot_density)
