--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(portfolio_daily_plot)
 export(portfolio_distr_plot)
 export(portfolio_performance)
 export(portfolio_total_plot)
+export(prophesize)
 export(quants)
 export(queryDW)
 export(queryDummy)
