--- a/NAMESPACE
+++ b/NAMESPACE
@@ -226,6 +226,7 @@ importFrom(lubridate,weeks)
 importFrom(lubridate,year)
 importFrom(lubridate,ymd)
 importFrom(lubridate,ymd_hms)
+importFrom(magrittr,"%>%")
 importFrom(openxlsx,addWorksheet)
 importFrom(openxlsx,copyWorkbook)
 importFrom(openxlsx,getSheetNames)
