New cumulative response

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ export(mplot_gain)
 export(mplot_importance)
 export(mplot_lineal)
 export(mplot_metrics)
+export(mplot_response)
 export(mplot_roc)
 export(mplot_splits)
 export(mse)
