--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(df_str)
 export(dist2d)
 export(distr)
 export(errors)
+export(etf_sector)
 export(export_plot)
 export(export_results)
 export(f1_contacts)
