Deleted nas fx New missigness logic Supressed VIM New gg_bars fx for quick nice barplots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(get_currency)
 export(get_stocks)
 export(get_stocks_hist)
 export(get_tweets)
+export(gg_bars)
 export(gg_colour_customs)
 export(gg_fill_customs)
 export(gg_pie)
@@ -88,7 +89,6 @@ export(mplot_splits)
 export(mse)
 export(msplit)
 export(myip)
-export(nas)
 export(noPlot)
 export(normalize)
 export(numericalonly)
