--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,8 +58,7 @@ Suggests:
     highcharter,
     plotly,
     rtweet,
-    shinydashboard,
-    VIM 
+    shinydashboard
 URL: https://github.com/laresbernardo/lares
 BugReports: https://github.com/laresbernardo/lares/issues
 RoxygenNote: 6.1.1
