Added rlang dep

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -248,6 +248,7 @@ importFrom(rdrop2,drop_dir)
 importFrom(rdrop2,drop_download)
 importFrom(rdrop2,drop_search)
 importFrom(rdrop2,drop_upload)
+importFrom(rlang,quo_is_null)
 importFrom(rmarkdown,render)
 importFrom(rvest,html_attr)
 importFrom(rvest,html_attrs)
