New @family Text Mining

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,7 @@ export(stocks_performance)
 export(stocks_report)
 export(stocks_total_plot)
 export(textCloud)
+export(textTokenizer)
 export(theme_lares)
 export(theme_lares2)
 export(trendsRelated)
