Typos and some format improvements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -147,6 +147,7 @@ import(dplyr)
 import(ggplot2)
 import(reshape2)
 import(rlist)
+import(stringr)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbDriver)
@@ -281,7 +282,6 @@ importFrom(stats,sd)
 importFrom(stats,start)
 importFrom(stats,var)
 importFrom(stats,xtabs)
-importFrom(stringr,str_locate_all)
 importFrom(tm,Corpus)
 importFrom(tm,TermDocumentMatrix)
 importFrom(tm,VectorSource)
