--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(cleanText)
 export(clusterKmeans)
 export(conf_mat)
 export(corr)
+export(corr_cross)
 export(corr_plot)
 export(corr_var)
 export(crosstab)
@@ -243,6 +244,8 @@ importFrom(openxlsx,sheets)
 importFrom(openxlsx,write.xlsx)
 importFrom(pROC,ci)
 importFrom(pROC,roc)
+importFrom(plotly,ggplotly)
+importFrom(plotly,plot_ly)
 importFrom(quantmod,getDividends)
 importFrom(quantmod,getQuote)
 importFrom(quantmod,getSymbols)
