--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(etf_sector)
 export(export_plot)
 export(export_results)
 export(f1_contacts)
+export(fb_posts)
 export(forecast_arima)
 export(forecast_ml)
 export(formatNum)
@@ -290,6 +291,7 @@ importFrom(tm,stopwords)
 importFrom(tm,stripWhitespace)
 importFrom(tm,tm_map)
 importFrom(utils,URLencode)
+importFrom(utils,browseURL)
 importFrom(utils,capture.output)
 importFrom(utils,combn)
 importFrom(utils,data)
