--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(etf_sector)
 export(export_plot)
 export(export_results)
 export(f1_contacts)
+export(fb_post)
 export(fb_posts)
 export(forecast_arima)
 export(forecast_ml)
