General fixes, new mice, and extended description

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ export(h2o_update)
 export(haveInternet)
 export(holidays)
 export(importxlsx)
+export(impute)
 export(ip_country)
 export(iter_seeds)
 export(json2vector)
@@ -231,6 +232,8 @@ importFrom(lubridate,year)
 importFrom(lubridate,ymd)
 importFrom(lubridate,ymd_hms)
 importFrom(magrittr,"%>%")
+importFrom(mice,complete)
+importFrom(mice,mice)
 importFrom(openxlsx,addWorksheet)
 importFrom(openxlsx,copyWorkbook)
 importFrom(openxlsx,getSheetNames)
@@ -281,6 +284,8 @@ importFrom(stats,sd)
 importFrom(stats,start)
 importFrom(stats,var)
 importFrom(stats,xtabs)
+importFrom(tidyr,gather)
+importFrom(tidyr,spread)
 importFrom(tm,Corpus)
 importFrom(tm,TermDocumentMatrix)
 importFrom(tm,VectorSource)
