--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Analytics, Data Mining & Machine Learning
 Version: 4.6
 Author: Bernardo Lares
 Maintainer: Bernardo Lares <laresbernardo@gmail.com>
-Description: R library for better/faster analytics, visualization, data mining, and machine learning tasks.
+Description: R library for better/faster analytics, visualization, data mining, and machine learning tasks. With a wide variety of family functions, such as Machine Learning, Data Wrangling, Exploratory, and Scrapper, lares helps the analyst or data scientist to get quick and robust results, without the need of repetitive coding or extensive programming skills. 
 License: AGPL-3
 Encoding: UTF-8
 LazyData: true
@@ -24,6 +24,7 @@ Imports:
     jsonlite,
     lubridate,
     magrittr,
+    mice,
     openxlsx,
     pROC,
     quantmod,
