--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(loglossBinary)
 export(mae)
 export(mailSend)
 export(mape)
+export(matrixwd)
 export(missingness)
 export(model_metrics)
 export(mplot_conf)
