--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(db_download)
 export(db_upload)
 export(deg2num)
 export(df_str)
+export(df_tree)
 export(dist2d)
 export(distr)
 export(errors)
@@ -270,6 +271,7 @@ importFrom(sp,coordinates)
 importFrom(sp,over)
 importFrom(sp,proj4string)
 importFrom(sp,spTransform)
+importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,dist)
