--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,6 @@ export(db_download)
 export(db_upload)
 export(deg2num)
 export(df_str)
-export(df_tree)
 export(dist2d)
 export(distr)
 export(errors)
@@ -144,6 +143,7 @@ export(textFeats)
 export(textTokenizer)
 export(theme_lares)
 export(theme_lares2)
+export(tree_var)
 export(trendsRelated)
 export(trendsTime)
 export(typeform_download)
