New families added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -146,6 +146,7 @@ export(theme_lares2)
 export(tree_var)
 export(trendsRelated)
 export(trendsTime)
+export(try_require)
 export(typeform_download)
 export(updateLares)
 export(vector2text)
