Added sectors, improved portf distr plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(dist2d)
 export(distr)
 export(errors)
 export(etf_sector)
+export(etf_sector_plot)
 export(export_plot)
 export(export_results)
 export(f1_contacts)
