New freqs_df fx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(forecast_arima)
 export(forecast_ml)
 export(formatNum)
 export(freqs)
+export(freqs_df)
 export(gain_lift)
 export(geoAddress)
 export(geoGrid)
