New sentiment function and new families

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(ROC)
+export(autoline)
 export(balance_data)
 export(bindfiles)
 export(bring_api)
@@ -132,6 +133,7 @@ export(scale_x_comma)
 export(scale_x_percent)
 export(scale_y_comma)
 export(scale_y_percent)
+export(sentimentBreakdown)
 export(statusbar)
 export(stocks_daily_plot)
 export(stocks_hist_fix)
@@ -179,6 +181,7 @@ importFrom(googlesheets,gs_edit_cells)
 importFrom(googlesheets,gs_read)
 importFrom(googlesheets,gs_title)
 importFrom(grDevices,dev.off)
+importFrom(grDevices,dev.size)
 importFrom(grDevices,graphics.off)
 importFrom(grDevices,png)
 importFrom(graphics,box)
