New plot_df, plot_nums, and plot_cats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,7 +103,10 @@ export(numericalonly)
 export(ohse)
 export(one_hot_encoding_commas)
 export(pass)
+export(plot_cats)
 export(plot_chord)
+export(plot_df)
+export(plot_nums)
 export(plot_palette)
 export(plot_survey)
 export(plot_timeline)
