--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(corr_cross)
 export(corr_plot)
 export(corr_var)
 export(crosstab)
+export(daily_portfolio)
+export(daily_stocks)
 export(dalex_explainer)
 export(dalex_local)
 export(dalex_residuals)
@@ -30,7 +32,6 @@ export(dist2d)
 export(distr)
 export(errors)
 export(etf_sector)
-export(etf_sector_plot)
 export(export_plot)
 export(export_results)
 export(f1_contacts)
@@ -48,8 +49,6 @@ export(geoMap)
 export(geoStratum)
 export(get_credentials)
 export(get_currency)
-export(get_stocks)
-export(get_stocks_hist)
 export(get_tweets)
 export(gg_bars)
 export(gg_colour_customs)
@@ -110,11 +109,6 @@ export(plot_nums)
 export(plot_palette)
 export(plot_survey)
 export(plot_timeline)
-export(portfolio_daily)
-export(portfolio_daily_plot)
-export(portfolio_distr_plot)
-export(portfolio_performance)
-export(portfolio_total_plot)
 export(prophesize)
 export(quants)
 export(queryDW)
@@ -137,14 +131,16 @@ export(scale_x_percent)
 export(scale_y_comma)
 export(scale_y_percent)
 export(sentimentBreakdown)
+export(splot_change)
+export(splot_etf)
+export(splot_growth)
+export(splot_roi)
+export(splot_summary)
+export(splot_types)
 export(statusbar)
-export(stocks_daily_plot)
-export(stocks_hist_fix)
-export(stocks_html)
-export(stocks_objects)
-export(stocks_performance)
-export(stocks_report)
-export(stocks_total_plot)
+export(stocks_file)
+export(stocks_hist)
+export(stocks_obj)
 export(textCloud)
 export(textFeats)
 export(textTokenizer)
