--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(etf_sector)
 export(export_plot)
 export(export_results)
 export(f1_contacts)
+export(fb_insights)
 export(fb_post)
 export(fb_posts)
 export(forecast_arima)
@@ -141,6 +142,7 @@ export(statusbar)
 export(stocks_file)
 export(stocks_hist)
 export(stocks_obj)
+export(stocks_report)
 export(textCloud)
 export(textFeats)
 export(textTokenizer)
@@ -213,6 +215,7 @@ importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
 importFrom(httr,authenticate)
+importFrom(httr,content)
 importFrom(httr,oauth1.0_token)
 importFrom(httr,oauth_app)
 importFrom(httr,oauth_endpoint)
