New fb_accounts() fx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(etf_sector)
 export(export_plot)
 export(export_results)
 export(f1_contacts)
+export(fb_accounts)
 export(fb_insights)
 export(fb_post)
 export(fb_posts)
