--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(export_plot)
 export(export_results)
 export(f1_contacts)
 export(fb_accounts)
+export(fb_ads)
 export(fb_insights)
 export(fb_post)
 export(fb_posts)
