--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(fb_posts)
 export(forecast_arima)
 export(forecast_ml)
 export(formatNum)
+export(formatTime)
 export(freqs)
 export(freqs_df)
 export(gain_lift)
@@ -257,6 +258,11 @@ importFrom(openxlsx,sheets)
 importFrom(openxlsx,write.xlsx)
 importFrom(pROC,ci)
 importFrom(pROC,roc)
+importFrom(prophet,add_country_holidays)
+importFrom(prophet,fit.prophet)
+importFrom(prophet,make_future_dataframe)
+importFrom(prophet,prophet)
+importFrom(prophet,prophet_plot_components)
 importFrom(quantmod,getDividends)
 importFrom(quantmod,getQuote)
 importFrom(quantmod,getSymbols)
