--- a/NAMESPACE
+++ b/NAMESPACE
@@ -266,6 +266,7 @@ importFrom(rdrop2,drop_dir)
 importFrom(rdrop2,drop_download)
 importFrom(rdrop2,drop_search)
 importFrom(rdrop2,drop_upload)
+importFrom(rlang,as_label)
 importFrom(rmarkdown,render)
 importFrom(rvest,html_attr)
 importFrom(rvest,html_attrs)
