Finally theme pal = 4 working as it should

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(fb_ads)
 export(fb_insights)
 export(fb_post)
 export(fb_posts)
+export(font_exists)
 export(forecast_arima)
 export(forecast_ml)
 export(formatNum)
@@ -131,8 +132,10 @@ export(rmse)
 export(rsq)
 export(rsqa)
 export(scale_x_comma)
+export(scale_x_dollar)
 export(scale_x_percent)
 export(scale_y_comma)
+export(scale_y_dollar)
 export(scale_y_percent)
 export(sentimentBreakdown)
 export(splot_change)
