--- a/NAMESPACE
+++ b/NAMESPACE
@@ -247,6 +247,7 @@ importFrom(lubridate,year)
 importFrom(lubridate,ymd)
 importFrom(lubridate,ymd_hms)
 importFrom(magrittr,"%>%")
+importFrom(magrittr,set_colnames)
 importFrom(mice,complete)
 importFrom(mice,mice)
 importFrom(openxlsx,addWorksheet)
