--- a/NAMESPACE
+++ b/NAMESPACE
@@ -167,7 +167,6 @@ export(year_week)
 export(zerovar)
 import(dplyr)
 import(ggplot2)
-import(reshape2)
 import(rlist)
 import(stringr)
 importFrom(DBI,dbConnect)
@@ -175,7 +174,6 @@ importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbDriver)
 importFrom(DBI,dbSendQuery)
 importFrom(DBI,fetch)
-importFrom(beepr,beep)
 importFrom(config,get)
 importFrom(devtools,install)
 importFrom(devtools,install_github)
@@ -222,6 +220,7 @@ importFrom(httr,POST)
 importFrom(httr,add_headers)
 importFrom(httr,authenticate)
 importFrom(httr,content)
+importFrom(httr,http_error)
 importFrom(httr,oauth1.0_token)
 importFrom(httr,oauth_app)
 importFrom(httr,oauth_endpoint)
