Split h2o_automl results to new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(h2o_predict_API)
 export(h2o_predict_MOJO)
 export(h2o_predict_binary)
 export(h2o_predict_model)
+export(h2o_results)
 export(h2o_selectmodel)
 export(h2o_update)
 export(haveInternet)
