--- a/NAMESPACE
+++ b/NAMESPACE
@@ -207,6 +207,7 @@ importFrom(h2o,h2o.automl)
 importFrom(h2o,h2o.download_mojo)
 importFrom(h2o,h2o.download_pojo)
 importFrom(h2o,h2o.getModel)
+importFrom(h2o,h2o.getVersion)
 importFrom(h2o,h2o.init)
 importFrom(h2o,h2o.loadModel)
 importFrom(h2o,h2o.no_progress)
