--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(bindfiles)
 export(bring_api)
 export(calibrate)
 export(categ_reducer)
+export(check_attr)
 export(cleanText)
 export(clusterKmeans)
 export(conf_mat)
