--- a/NAMESPACE
+++ b/NAMESPACE
@@ -296,6 +296,7 @@ importFrom(stats,kmeans)
 importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,prcomp)
 importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,reorder)
