redundancy for 2 fixed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -181,6 +181,7 @@ importFrom(devtools,install_github)
 importFrom(forecast,Arima)
 importFrom(forecast,auto.arima)
 importFrom(forecast,forecast)
+importFrom(ggforce,geom_mark_ellipse)
 importFrom(googleAuthR,gar_auth)
 importFrom(googlesheets,gs_auth)
 importFrom(googlesheets,gs_edit_cells)
