New Slack function Added today's quote on stocks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,6 +139,7 @@ export(scale_y_comma)
 export(scale_y_dollar)
 export(scale_y_percent)
 export(sentimentBreakdown)
+export(slackSend)
 export(splot_change)
 export(splot_etf)
 export(splot_growth)
