pvalues in corr functions supported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -298,8 +298,10 @@ importFrom(stats,kmeans)
 importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,p.adjust)
 importFrom(stats,prcomp)
 importFrom(stats,predict)
+importFrom(stats,pt)
 importFrom(stats,quantile)
 importFrom(stats,reorder)
 importFrom(stats,sd)
