New target value logic implemented. Thanks to Daya and Cori for the idea ;)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -151,6 +151,7 @@ export(stocks_file)
 export(stocks_hist)
 export(stocks_obj)
 export(stocks_report)
+export(target_set)
 export(textCloud)
 export(textFeats)
 export(textTokenizer)
