freqs abs not plot topics_rake

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,7 @@ export(textFeats)
 export(textTokenizer)
 export(theme_lares)
 export(theme_lares2)
+export(topics_rake)
 export(tree_var)
 export(trendsRelated)
 export(trendsTime)
