New googlesheets4 fx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,7 @@ export(quiet)
 export(rbind_full)
 export(read.file)
 export(readGS)
+export(readGS4)
 export(removenacols)
 export(removenarows)
 export(replaceall)
@@ -186,10 +187,8 @@ importFrom(forecast,auto.arima)
 importFrom(forecast,forecast)
 importFrom(ggforce,geom_mark_ellipse)
 importFrom(googleAuthR,gar_auth)
-importFrom(googlesheets,gs_auth)
-importFrom(googlesheets,gs_edit_cells)
-importFrom(googlesheets,gs_read)
-importFrom(googlesheets,gs_title)
+importFrom(googlesheets4,read_sheet)
+importFrom(googlesheets4,sheets_auth)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,dev.size)
 importFrom(grDevices,graphics.off)
