New sum(mer) function FB fix output when no data at all

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -152,6 +152,7 @@ export(stocks_file)
 export(stocks_hist)
 export(stocks_obj)
 export(stocks_report)
+export(summer)
 export(target_set)
 export(textCloud)
 export(textFeats)
