httr fix for fb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -225,11 +225,13 @@ importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
 importFrom(httr,authenticate)
+importFrom(httr,config)
 importFrom(httr,content)
 importFrom(httr,http_error)
 importFrom(httr,oauth1.0_token)
 importFrom(httr,oauth_app)
 importFrom(httr,oauth_endpoint)
+importFrom(httr,set_config)
 importFrom(httr,stop_for_status)
 importFrom(httr,upload_file)
 importFrom(jsonlite,flatten)
