--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ export(msplit)
 export(myip)
 export(noPlot)
 export(normalize)
+export(num_abbr)
 export(numericalonly)
 export(ohse)
 export(one_hot_encoding_commas)
