--- a/NAMESPACE
+++ b/NAMESPACE
@@ -171,6 +171,7 @@ export(vector2text)
 export(writeGS)
 export(year_month)
 export(year_week)
+export(yt2mp3)
 export(zerovar)
 import(dplyr)
 import(ggplot2)
