New check_opts fx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(bring_api)
 export(calibrate)
 export(categ_reducer)
 export(check_attr)
+export(check_opts)
 export(cleanText)
 export(clusterKmeans)
 export(conf_mat)
