--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(dalex_explainer)
 export(dalex_local)
 export(dalex_residuals)
 export(dalex_variable)
+export(date_cuts)
 export(date_feats)
 export(dateformat)
 export(db_download)
