Multiple stocks_quote

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -154,6 +154,7 @@ export(statusbar)
 export(stocks_file)
 export(stocks_hist)
 export(stocks_obj)
+export(stocks_quote)
 export(stocks_report)
 export(summer)
 export(target_set)
