New image_metadata fx and listfiles logic improved

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(h2o_selectmodel)
 export(h2o_update)
 export(haveInternet)
 export(holidays)
+export(image_metadata)
 export(importxlsx)
 export(impute)
 export(ip_country)
