New creatives fx and st pos-api return process

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(export_results)
 export(f1_contacts)
 export(fb_accounts)
 export(fb_ads)
+export(fb_creatives)
 export(fb_insights)
 export(fb_post)
 export(fb_posts)
