--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(fb_creatives)
 export(fb_insights)
 export(fb_post)
 export(fb_posts)
+export(flatten_list)
 export(font_exists)
 export(forecast_arima)
 export(forecast_ml)
@@ -165,6 +166,8 @@ export(textFeats)
 export(textTokenizer)
 export(theme_lares)
 export(theme_lares2)
+export(tic)
+export(toc)
 export(topics_rake)
 export(tree_var)
 export(trendsRelated)
