--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,6 +135,7 @@ export(readGS4)
 export(removenacols)
 export(removenarows)
 export(replaceall)
+export(resettictoc)
 export(right)
 export(rmse)
 export(rsq)
