--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ export(lares_pal)
 export(left)
 export(li_auth)
 export(li_profile)
+export(list_cats)
 export(listfiles)
 export(loglossBinary)
 export(mae)
