New freqs_plot and patchwork dep added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(formatNum)
 export(formatTime)
 export(freqs)
 export(freqs_df)
+export(freqs_plot)
 export(gain_lift)
 export(geoAddress)
 export(geoGrid)
@@ -270,6 +271,8 @@ importFrom(openxlsx,sheets)
 importFrom(openxlsx,write.xlsx)
 importFrom(pROC,ci)
 importFrom(pROC,roc)
+importFrom(patchwork,plot_annotation)
+importFrom(patchwork,plot_layout)
 importFrom(rlang,as_label)
 importFrom(rvest,html_attr)
 importFrom(rvest,html_attrs)
@@ -305,6 +308,8 @@ importFrom(stats,start)
 importFrom(stats,var)
 importFrom(stats,xtabs)
 importFrom(tidyr,gather)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,spread)
 importFrom(tm,Corpus)
 importFrom(tm,TermDocumentMatrix)
