--- a/NAMESPACE
+++ b/NAMESPACE
@@ -205,10 +205,6 @@ importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,rasterImage)
 importFrom(graphics,rect)
-importFrom(gridExtra,arrangeGrob)
-importFrom(gridExtra,grid.arrange)
-importFrom(gridExtra,tableGrob)
-importFrom(gridExtra,ttheme_minimal)
 importFrom(h2o,as.h2o)
 importFrom(h2o,h2o.accuracy)
 importFrom(h2o,h2o.automl)
@@ -273,6 +269,7 @@ importFrom(pROC,ci)
 importFrom(pROC,roc)
 importFrom(patchwork,plot_annotation)
 importFrom(patchwork,plot_layout)
+importFrom(patchwork,wrap_plots)
 importFrom(rlang,as_label)
 importFrom(rvest,html_attr)
 importFrom(rvest,html_attrs)
