The world is not yet prepared to tidyr's pivot_*

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -278,6 +278,7 @@ importFrom(rvest,html_nodes)
 importFrom(rvest,html_table)
 importFrom(rvest,html_text)
 importFrom(scales,comma)
+importFrom(scales,dollar)
 importFrom(scales,percent)
 importFrom(sp,"coordinates<-")
 importFrom(sp,"proj4string<-")
@@ -305,8 +306,6 @@ importFrom(stats,start)
 importFrom(stats,var)
 importFrom(stats,xtabs)
 importFrom(tidyr,gather)
-importFrom(tidyr,pivot_longer)
-importFrom(tidyr,pivot_wider)
 importFrom(tidyr,spread)
 importFrom(tm,Corpus)
 importFrom(tm,TermDocumentMatrix)
