--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,6 +137,7 @@ export(readGS4)
 export(removenacols)
 export(removenarows)
 export(replaceall)
+export(replacefactor)
 export(resettictoc)
 export(right)
 export(rmse)
