--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ export(clusterKmeans)
 export(conf_mat)
 export(corr)
 export(corr_cross)
-export(corr_plot)
 export(corr_var)
 export(crosstab)
 export(daily_portfolio)
@@ -60,6 +59,7 @@ export(geoMap)
 export(geoStratum)
 export(get_credentials)
 export(get_currency)
+export(get_mp3)
 export(get_tweets)
 export(gg_bars)
 export(gg_colour_customs)
@@ -183,7 +183,6 @@ export(vector2text)
 export(writeGS)
 export(year_month)
 export(year_week)
-export(yt2mp3)
 export(zerovar)
 import(dplyr)
 import(ggplot2)
@@ -281,12 +280,6 @@ importFrom(rvest,html_text)
 importFrom(scales,comma)
 importFrom(scales,dollar)
 importFrom(scales,percent)
-importFrom(sp,"coordinates<-")
-importFrom(sp,"proj4string<-")
-importFrom(sp,coordinates)
-importFrom(sp,over)
-importFrom(sp,proj4string)
-importFrom(sp,spTransform)
 importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
@@ -308,16 +301,6 @@ importFrom(stats,var)
 importFrom(stats,xtabs)
 importFrom(tidyr,gather)
 importFrom(tidyr,spread)
-importFrom(tm,Corpus)
-importFrom(tm,TermDocumentMatrix)
-importFrom(tm,VectorSource)
-importFrom(tm,content_transformer)
-importFrom(tm,removeNumbers)
-importFrom(tm,removePunctuation)
-importFrom(tm,removeWords)
-importFrom(tm,stopwords)
-importFrom(tm,stripWhitespace)
-importFrom(tm,tm_map)
 importFrom(utils,URLencode)
 importFrom(utils,browseURL)
 importFrom(utils,capture.output)
@@ -338,6 +321,4 @@ importFrom(utils,tail)
 importFrom(utils,type.convert)
 importFrom(utils,write.csv)
 importFrom(utils,write.table)
-importFrom(wordcloud,textplot)
-importFrom(wordcloud,wordcloud)
 importFrom(xml2,read_html)
