--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -20,12 +20,12 @@ jobs:
           saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
         shell: Rscript {0}
 
-      #- name: Cache R packages
-      #  uses: actions/cache@v1
-      #  with:
-      #    path: ${{ env.R_LIBS_USER }}
-      #    key: macOS-r-3.6-${{ hashFiles('.github/depends.Rds') }}
-      #    restore-keys: macOS-r-3.6-
+      - name: Cache R packages
+        uses: actions/cache@v1
+        with:
+          path: ${{ env.R_LIBS_USER }}
+          key: macOS-r-4.0-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: macOS-r-4.0-
 
       - name: Install dependencies
         run: |
