New examples + OHSE fix for holidays scrap + v2t

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -179,6 +179,7 @@ export(trendsTime)
 export(try_require)
 export(typeform_download)
 export(updateLares)
+export(v2t)
 export(vector2text)
 export(writeGS)
 export(year_month)
