New lasso_vars() fx + More docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ export(ip_country)
 export(iter_seeds)
 export(json2vector)
 export(lares_pal)
+export(lasso_vars)
 export(left)
 export(li_auth)
 export(li_profile)
@@ -113,8 +114,8 @@ export(noPlot)
 export(normalize)
 export(num_abbr)
 export(numericalonly)
+export(ohe_commas)
 export(ohse)
-export(one_hot_encoding_commas)
 export(pass)
 export(plot_cats)
 export(plot_chord)
@@ -213,6 +214,7 @@ importFrom(h2o,h2o.download_mojo)
 importFrom(h2o,h2o.download_pojo)
 importFrom(h2o,h2o.getModel)
 importFrom(h2o,h2o.getVersion)
+importFrom(h2o,h2o.glm)
 importFrom(h2o,h2o.init)
 importFrom(h2o,h2o.loadModel)
 importFrom(h2o,h2o.no_progress)
