--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -37,6 +37,7 @@ jobs:
       - name: Install package
         run: R CMD INSTALL .
 
-      - name: Deploy package
-        run: pkgdown::deploy_to_branch(new_process = FALSE)
+      - name: Deploy package documentation
+        run:  |
+          pkgdown::deploy_to_branch(new_process = FALSE, override = list(ganalytics = "UA-166493168-1"))
         shell: Rscript {0}
