Clearer/less deps + Use of .data globally

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,7 +46,6 @@ export(fb_posts)
 export(flatten_list)
 export(font_exists)
 export(forecast_arima)
-export(forecast_ml)
 export(formatNum)
 export(formatTime)
 export(freqs)
@@ -79,6 +78,7 @@ export(holidays)
 export(image_metadata)
 export(importxlsx)
 export(impute)
+export(install_recommended)
 export(ip_country)
 export(iter_seeds)
 export(json2vector)
@@ -126,10 +126,7 @@ export(plot_survey)
 export(plot_timeline)
 export(prophesize)
 export(quants)
-export(queryDW)
-export(queryDummy)
 export(queryGA)
-export(queryProduc)
 export(quiet)
 export(rbind_full)
 export(read.file)
@@ -178,11 +175,9 @@ export(tree_var)
 export(trendsRelated)
 export(trendsTime)
 export(try_require)
-export(typeform_download)
 export(updateLares)
 export(v2t)
 export(vector2text)
-export(writeGS)
 export(year_month)
 export(year_week)
 export(zerovar)
@@ -190,11 +185,6 @@ import(dplyr)
 import(ggplot2)
 import(rlist)
 import(stringr)
-importFrom(DBI,dbConnect)
-importFrom(DBI,dbDisconnect)
-importFrom(DBI,dbDriver)
-importFrom(DBI,dbSendQuery)
-importFrom(DBI,fetch)
 importFrom(config,get)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,dev.size)
@@ -203,6 +193,7 @@ importFrom(grDevices,png)
 importFrom(graphics,box)
 importFrom(graphics,grid)
 importFrom(graphics,hist)
+importFrom(graphics,legend)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,rasterImage)
@@ -241,8 +232,10 @@ importFrom(jsonlite,flatten)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(lubridate,"%m+%")
+importFrom(lubridate,ceiling_date)
 importFrom(lubridate,date)
 importFrom(lubridate,day)
+importFrom(lubridate,days)
 importFrom(lubridate,dmy)
 importFrom(lubridate,dmy_hms)
 importFrom(lubridate,floor_date)
@@ -273,6 +266,7 @@ importFrom(pROC,roc)
 importFrom(patchwork,plot_annotation)
 importFrom(patchwork,plot_layout)
 importFrom(patchwork,wrap_plots)
+importFrom(rlang,.data)
 importFrom(rlang,as_label)
 importFrom(rvest,html_attr)
 importFrom(rvest,html_attrs)
@@ -291,6 +285,7 @@ importFrom(stats,end)
 importFrom(stats,kmeans)
 importFrom(stats,lm)
 importFrom(stats,median)
+importFrom(stats,model.matrix)
 importFrom(stats,na.omit)
 importFrom(stats,p.adjust)
 importFrom(stats,prcomp)
