--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -38,6 +38,5 @@ jobs:
         run: R CMD INSTALL .
 
       - name: Deploy package documentation
-        run:  |
-          pkgdown::deploy_to_branch(new_process = FALSE, override = list(ganalytics = "UA-166493168-2"))
+        run: pkgdown::deploy_to_branch(new_process = FALSE)
         shell: Rscript {0}
