More docs, examples, and families of fxs + No Win

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(geoGrid)
 export(geoMap)
 export(geoStratum)
 export(get_credentials)
+export(get_creds)
 export(get_currency)
 export(get_mp3)
 export(get_tweets)
@@ -126,6 +127,7 @@ export(plot_survey)
 export(plot_timeline)
 export(prophesize)
 export(quants)
+export(queryDB)
 export(queryGA)
 export(quiet)
 export(rbind_full)
