--- a/NAMESPACE
+++ b/NAMESPACE
@@ -269,6 +269,7 @@ importFrom(patchwork,plot_layout)
 importFrom(patchwork,wrap_plots)
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
+importFrom(rlang,as_name)
 importFrom(rvest,html_attr)
 importFrom(rvest,html_attrs)
 importFrom(rvest,html_node)
