--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ export(left)
 export(li_auth)
 export(li_profile)
 export(list_cats)
+export(list_fxs_file)
 export(listfiles)
 export(loglossBinary)
 export(mae)
@@ -306,7 +307,9 @@ importFrom(utils,capture.output)
 importFrom(utils,combn)
 importFrom(utils,data)
 importFrom(utils,download.file)
+importFrom(utils,find)
 importFrom(utils,flush.console)
+importFrom(utils,getParseData)
 importFrom(utils,globalVariables)
 importFrom(utils,head)
 importFrom(utils,install.packages)
