No DS_Store + Portfolio docs + move_files()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,7 @@ export(mailSend)
 export(mape)
 export(missingness)
 export(model_metrics)
+export(move_files)
 export(mplot_conf)
 export(mplot_cuts)
 export(mplot_cuts_error)
