--- a/NAMESPACE
+++ b/NAMESPACE
@@ -150,6 +150,9 @@ export(scale_x_percent)
 export(scale_y_comma)
 export(scale_y_dollar)
 export(scale_y_percent)
+export(scrabble_dictionary)
+export(scrabble_score)
+export(scrabble_words)
 export(sentimentBreakdown)
 export(slackSend)
 export(splot_change)
