--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(gg_colour_customs)
 export(gg_fill_customs)
 export(gg_pie)
 export(gg_text_customs)
+export(grepl_anywhere)
 export(h2o_automl)
 export(h2o_predict_API)
 export(h2o_predict_MOJO)
@@ -151,6 +152,7 @@ export(scale_y_comma)
 export(scale_y_dollar)
 export(scale_y_percent)
 export(scrabble_dictionary)
+export(scrabble_points)
 export(scrabble_score)
 export(scrabble_words)
 export(sentimentBreakdown)
