New freqs_list fx (beta)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(formatNum)
 export(formatTime)
 export(freqs)
 export(freqs_df)
+export(freqs_list)
 export(freqs_plot)
 export(gain_lift)
 export(geoAddress)
@@ -271,6 +272,7 @@ importFrom(openxlsx,sheets)
 importFrom(openxlsx,write.xlsx)
 importFrom(pROC,ci)
 importFrom(pROC,roc)
+importFrom(patchwork,guide_area)
 importFrom(patchwork,plot_annotation)
 importFrom(patchwork,plot_layout)
 importFrom(patchwork,wrap_plots)
