--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
 Maintainer: Bernardo Lares <laresbernardo@gmail.com>
 Description: R library for better/faster analytics, visualization, data mining, and machine learning 
     tasks. With a wide variety of family functions, such as Machine Learning, Data Wrangling, 
-    Exploratory, and Scrapper, lares helps the analyst or data scientist to get quick and robust 
+    Exploratory, and Scrapper, it helps the analyst or data scientist to get quick and robust 
     results, without the need of repetitive coding or extensive programming skills. 
 Imports: 
     config,
