Lots of little improvements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,7 +66,7 @@ export(gg_colour_customs)
 export(gg_fill_customs)
 export(gg_pie)
 export(gg_text_customs)
-export(grepl_anywhere)
+export(grepl_letters)
 export(h2o_automl)
 export(h2o_predict_API)
 export(h2o_predict_MOJO)
@@ -90,7 +90,7 @@ export(left)
 export(li_auth)
 export(li_profile)
 export(list_cats)
-export(list_fxs_file)
+export(list_fun_file)
 export(listfiles)
 export(loglossBinary)
 export(mae)
