spread_list + ci_var functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(bring_api)
 export(categ_reducer)
 export(check_attr)
 export(check_opts)
+export(ci_var)
 export(cleanText)
 export(clusterKmeans)
 export(conf_mat)
@@ -164,6 +165,7 @@ export(splot_growth)
 export(splot_roi)
 export(splot_summary)
 export(splot_types)
+export(spread_list)
 export(statusbar)
 export(stocks_file)
 export(stocks_hist)
@@ -301,6 +303,7 @@ importFrom(stats,p.adjust)
 importFrom(stats,prcomp)
 importFrom(stats,predict)
 importFrom(stats,pt)
+importFrom(stats,qt)
 importFrom(stats,quantile)
 importFrom(stats,reorder)
 importFrom(stats,sd)
