Confidence intervals family

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(bring_api)
 export(categ_reducer)
 export(check_attr)
 export(check_opts)
+export(ci_lower)
+export(ci_upper)
 export(ci_var)
 export(cleanText)
 export(clusterKmeans)
