@family fix + outliers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,6 +123,8 @@ export(num_abbr)
 export(numericalonly)
 export(ohe_commas)
 export(ohse)
+export(outlier_turkey)
+export(outlier_zscore)
 export(pass)
 export(plot_cats)
 export(plot_chord)
