--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -40,6 +40,12 @@ jobs:
 
       - name: Install package
         run: R CMD INSTALL .
+        
+      - name: Who am I (temp-set)
+        run: |
+          system('git config --global user.email "laresbernardo@gmail.com")
+          system('git config --global user.name "Bernardo Lares")
+        shell: Rscript {0}
 
       - name: Deploy package documentation
         run: pkgdown::deploy_to_branch(new_process = FALSE)
