Outliers plot with dif z-scores

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(font_exists)
 export(forecast_arima)
 export(formatNum)
 export(formatTime)
+export(format_text)
 export(freqs)
 export(freqs_df)
 export(freqs_list)
@@ -125,6 +126,7 @@ export(ohe_commas)
 export(ohse)
 export(outlier_turkey)
 export(outlier_zscore)
+export(outlier_zscore_plot)
 export(pass)
 export(plot_cats)
 export(plot_chord)
@@ -138,6 +140,7 @@ export(quants)
 export(queryDB)
 export(queryGA)
 export(quiet)
+export(quo_val)
 export(rbind_full)
 export(read.file)
 export(readGS)
