--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,8 +49,8 @@ export(flatten_list)
 export(font_exists)
 export(forecast_arima)
 export(formatNum)
+export(formatText)
 export(formatTime)
-export(format_text)
 export(freqs)
 export(freqs_df)
 export(freqs_list)
