writeGS is back using API v4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -144,7 +144,6 @@ export(quo_val)
 export(rbind_full)
 export(read.file)
 export(readGS)
-export(readGS4)
 export(removenacols)
 export(removenarows)
 export(replaceall)
@@ -196,6 +195,7 @@ export(try_require)
 export(updateLares)
 export(v2t)
 export(vector2text)
+export(writeGS)
 export(year_month)
 export(year_week)
 export(zerovar)
