--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(gg_colour_customs)
 export(gg_fill_customs)
 export(gg_pie)
 export(gg_text_customs)
+export(glued)
 export(grepl_letters)
 export(h2o_automl)
 export(h2o_predict_API)
