--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(fb_creatives)
 export(fb_insights)
 export(fb_post)
 export(fb_posts)
+export(filesGD)
 export(flatten_list)
 export(font_exists)
 export(forecast_arima)
