--- a/NAMESPACE
+++ b/NAMESPACE
@@ -196,6 +196,7 @@ export(try_require)
 export(updateLares)
 export(v2t)
 export(vector2text)
+export(winsorize)
 export(writeGS)
 export(year_month)
 export(year_week)
