Added credentials post to README

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(fb_insights)
 export(fb_post)
 export(fb_posts)
 export(filesGD)
+export(files_functions)
 export(font_exists)
 export(forecast_arima)
 export(formatNum)
@@ -95,7 +96,6 @@ export(left)
 export(li_auth)
 export(li_profile)
 export(list_cats)
-export(list_fun_file)
 export(listfiles)
 export(loglossBinary)
 export(mae)
