--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(fb_creatives)
 export(fb_insights)
 export(fb_post)
 export(fb_posts)
+export(fb_process)
 export(filesGD)
 export(files_functions)
 export(font_exists)
