Welcome fb_rf()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(fb_insights)
 export(fb_post)
 export(fb_posts)
 export(fb_process)
+export(fb_rf)
 export(filesGD)
 export(files_functions)
 export(font_exists)
