Fixed corr's pvalues + Added m=1 abline on regression plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -305,6 +305,7 @@ importFrom(scales,percent)
 importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
+importFrom(stats,cor.test)
 importFrom(stats,dist)
 importFrom(stats,end)
 importFrom(stats,kmeans)
