--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(check_opts)
 export(ci_lower)
 export(ci_upper)
 export(ci_var)
+export(cleanNames)
 export(cleanText)
 export(clusterKmeans)
 export(conf_mat)
