shap_var included

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -172,6 +172,7 @@ export(scrabble_points)
 export(scrabble_score)
 export(scrabble_words)
 export(sentimentBreakdown)
+export(shap_var)
 export(slackSend)
 export(splot_change)
 export(splot_etf)
