isURL + balance_data tidy-friendly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ export(importxlsx)
 export(impute)
 export(install_recommended)
 export(ip_country)
+export(isURL)
 export(iter_seeds)
 export(json2vector)
 export(lares_pal)
